# stock_management

./: .env  .gitignore  Cargo.toml  diesel.toml
database/migrations/2025-09-07-010355_create_products/: up.sql
database/migrations/2025-11-30-142320-0000_create_suppliers/: up.sql
database/migrations/2025-12-05-005635-0000_create_places/: up.sql
src/: main.rs
src/domain/: mod.rs  place.rs  product.rs  supplier.rs
src/egui/: mod.rs
src/egui/components/modals/: mod.rs  place_form_modal.rs  product_form_modal.rs  supplier_form_modal.rs
src/egui/screens/: dashboard_screen.rs  mod.rs  places_screen.rs  products_screen.rs  suppliers_screen.rs
src/egui/widgets/: sidebar.rs
src/iced/: mod.rs
src/iced/screens/: mod.rs  products_screen.rs
src/iced/widgets/: sidebar.rs
src/infra/: db.rs  mod.rs  models.rs  schema.rs
src/infra/repositories/: mod.rs  place_repository.rs  product_repository.rs  supplier_repository.rs
src/screens/: products_screen.rs
src/services/: mod.rs
src/services/export/: export_places.rs  export_products.rs  export_suppliers.rs  mod.rs
src/services/import/: import_places.rs  import_products.rs  import_suppliers.rs  mod.rs
src/widgets/: sidebar.rs
