[package]
name = "stock_management"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "*"
diesel = { version = "2.2.4", features = ["sqlite"] }
chrono = { version = "0.4" }
dotenvy = "0.15"
egui = "0.33.0"
egui_extras = "0.33.0"
eframe = "0.33.0" 
validator = { version = "0.19", features = ["derive"] }
rust_xlsxwriter = "0.92.2"
rfd = "0.15.4"
calamine = "0.32.0"
serde = "1.0.228"
